HTML関係について学びました

--- a/index.html
+++ b/index.html
@@ -6,8 +6,46 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- ここに HTML を追加していきます -->
+    <header>
+      <h1>WEB勉強会</h1>
+      <nav>
+        <ui>
+          <li><a href="#movies">Movies</a></li>
+        </ui>
+      </nav>
+    </header>
+    <main>
+      <section id="movies">
+        <p>test</p>
+        <h2>動画一覧</h2>
+        <ul>
+        <li>
+          <strong>Inception</strong> (2010)<br />
+          <img src="./asset/inception.png" alt="Inception poster" />
+          <p>これは映画のあらすじです</p>
+        </li>
+        <li>
+          <strong>Inception</strong> (2010)<br />
+          <img src="./asset/inception.png" alt="Inception poster" />
+          <p>これは映画のあらすじです</p>
+        </li>
+        <li>
+          <strong>Inception</strong> (2010)<br />
+          <img src="./asset/inception.png" alt="Inception poster" />
+          <p>これは映画のあらすじです</p>
+        </li>
+        <li>
+          <strong>Inception</strong> (2010)<br />
+          <img src="./asset/inception.png" alt="Inception poster" />
+          <p>これは映画のあらすじです</p>
+        </li>
+        </ul>
+      </section>
+    </main>
 
+    <footer>
+      <small>&copy; 2025 Movie Fan</small>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
